@@ -23,18 +23,43 @@
  */
 package hudson;
 
-import com.google.common.collect.Lists;
+import static org.apache.commons.io.FilenameUtils.getBaseName;
+
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.Plugin.DummyImpl;
 import hudson.PluginWrapper.Dependency;
 import hudson.model.Hudson;
-import jenkins.util.AntClassLoader;
 import hudson.util.CyclicGraphDetector;
 import hudson.util.CyclicGraphDetector.CycleDetectedException;
 import hudson.util.IOUtils;
 import hudson.util.MaskingClassLoader;
-import hudson.util.VersionNumber;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FilenameFilter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.HashSet;
+import java.util.List;
+import java.util.jar.Attributes;
+import java.util.jar.JarFile;
+import java.util.jar.Manifest;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import jenkins.ClassLoaderReflectionToolkit;
 import jenkins.ExtensionFilter;
+import jenkins.plugins.DetachedPluginsUtil;
+import jenkins.util.AntClassLoader;
+import jenkins.util.SystemProperties;
+import jenkins.util.URLClassLoader2;
 import org.apache.commons.io.output.NullOutputStream;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
@@ -50,39 +75,16 @@ import org.apache.tools.zip.ZipEntry;
 import org.apache.tools.zip.ZipExtraField;
 import org.apache.tools.zip.ZipOutputStream;
 
-import java.io.Closeable;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FilenameFilter;
-import java.io.IOException;
-import java.lang.reflect.Field;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Vector;
-import java.util.jar.Attributes;
-import java.util.jar.JarFile;
-import java.util.jar.Manifest;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
 public class ClassicPluginStrategy implements PluginStrategy {
+
+    private static final Logger LOGGER = Logger.getLogger(ClassicPluginStrategy.class.getName());
 
     /**
      * Filter for jar files.
      */
-    private static final FilenameFilter JAR_FILTER = new FilenameFilter() {
-        public boolean accept(File dir,String name) {
-            return name.endsWith(".jar");
-        }
-    };
+    private static final FilenameFilter JAR_FILTER = (dir, name) -> name.endsWith(".jar");
 
-    private PluginManager pluginManager;
+    private final PluginManager pluginManager;
 
     /**
      * All the plugins eventually delegate this classloader to load core, servlet APIs, and SE runtime.
@@ -95,17 +97,23 @@ public class ClassicPluginStrategy implements PluginStrategy {
 
     @Override public String getShortName(File archive) throws IOException {
         Manifest manifest;
+        if (!archive.exists()) {
+            throw new FileNotFoundException("Failed to load " + archive + ". The file does not exist");
+        } else if (!archive.isFile()) {
+            throw new FileNotFoundException("Failed to load " + archive + ". It is not a file");
+        }
+
         if (isLinked(archive)) {
             manifest = loadLinkedManifest(archive);
         } else {
-            JarFile jf = new JarFile(archive, false);
-            try {
+            try (JarFile jf = new JarFile(archive, false)) {
                 manifest = jf.getManifest();
-            } finally {
-                jf.close();
+            } catch (IOException ex) {
+                // Mention file name in the exception
+                throw new IOException("Failed to load " + archive, ex);
             }
         }
-        return PluginWrapper.computeShortName(manifest, archive);
+        return PluginWrapper.computeShortName(manifest, archive.getName());
     }
 
     private static boolean isLinked(File archive) {
@@ -113,29 +121,38 @@ public class ClassicPluginStrategy implements PluginStrategy {
     }
 
     private static Manifest loadLinkedManifest(File archive) throws IOException {
-            // resolve the .hpl file to the location of the manifest file
-            final String firstLine = IOUtils.readFirstLine(new FileInputStream(archive), "UTF-8");
-            if (firstLine.startsWith("Manifest-Version:")) {
-                // this is the manifest already
-            } else {
-                // indirection
-                archive = resolve(archive, firstLine);
-            }
-            // then parse manifest
-            FileInputStream in = new FileInputStream(archive);
+            // resolve the .hpl file to the location of the manifest file        
             try {
-                return new Manifest(in);
+                // Locate the manifest
+                String firstLine;
+                try (InputStream manifestHeaderInput = Files.newInputStream(archive.toPath())) {
+                    firstLine = IOUtils.readFirstLine(manifestHeaderInput, "UTF-8");
+                } catch (InvalidPathException e) {
+                    throw new IOException(e);
+                }
+                //noinspection StatementWithEmptyBody
+                if (firstLine.startsWith("Manifest-Version:")) {
+                    // this is the manifest already
+                } else {
+                    // indirection
+                    archive = resolve(archive, firstLine);
+                }
+                
+                // Read the manifest
+                try (InputStream manifestInput = Files.newInputStream(archive.toPath())) {
+                    return new Manifest(manifestInput);
+                } catch (InvalidPathException e) {
+                    throw new IOException(e);
+                }
             } catch (IOException e) {
                 throw new IOException("Failed to load " + archive, e);
-            } finally {
-                in.close();
             }
     }
 
     @Override public PluginWrapper createPluginWrapper(File archive) throws IOException {
         final Manifest manifest;
-        URL baseResourceURL;
 
+        URL baseResourceURL;
         File expandDir = null;
         // if .hpi, this is the directory where war is expanded
 
@@ -146,21 +163,25 @@ public class ClassicPluginStrategy implements PluginStrategy {
             if (archive.isDirectory()) {// already expanded
                 expandDir = archive;
             } else {
-                expandDir = new File(archive.getParentFile(), PluginWrapper.getBaseName(archive));
+                File f = pluginManager.getWorkDir();
+                expandDir =  new File(f == null ? archive.getParentFile() : f, getBaseName(archive.getName()));
                 explode(archive, expandDir);
             }
 
-            File manifestFile = new File(expandDir, "META-INF/MANIFEST.MF");
+            File manifestFile = new File(expandDir, PluginWrapper.MANIFEST_FILENAME);
             if (!manifestFile.exists()) {
                 throw new IOException(
                         "Plugin installation failed. No manifest at "
                                 + manifestFile);
             }
-            FileInputStream fin = new FileInputStream(manifestFile);
-            try {
+            try (InputStream fin = Files.newInputStream(manifestFile.toPath())) {
                 manifest = new Manifest(fin);
-            } finally {
-                fin.close();
+            } catch (InvalidPathException e) {
+                throw new IOException(e);
+            }
+            String canonicalName = manifest.getMainAttributes().getValue("Short-Name") + ".jpi";
+            if (!archive.getName().equals(canonicalName)) {
+                LOGGER.warning(() -> "encountered " + archive + " under a nonstandard name; expected " + canonicalName);
             }
         }
 
@@ -169,7 +190,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         // TODO: define a mechanism to hide classes
         // String export = manifest.getMainAttributes().getValue("Export");
 
-        List<File> paths = new ArrayList<File>();
+        List<File> paths = new ArrayList<>();
         if (isLinked) {
             parseClassPath(manifest, archive, paths, "Libraries", ",");
             parseClassPath(manifest, archive, paths, "Class-Path", " +"); // backward compatibility
@@ -177,23 +198,29 @@ public class ClassicPluginStrategy implements PluginStrategy {
             baseResourceURL = resolve(archive,atts.getValue("Resource-Path")).toURI().toURL();
         } else {
             File classes = new File(expandDir, "WEB-INF/classes");
-            if (classes.exists())
+            if (classes.exists()) { // should not normally happen, due to createClassJarFromWebInfClasses
+                LOGGER.log(Level.WARNING, "Deprecated unpacked classes directory found in {0}", classes);
                 paths.add(classes);
+            }
             File lib = new File(expandDir, "WEB-INF/lib");
             File[] libs = lib.listFiles(JAR_FILTER);
             if (libs != null)
                 paths.addAll(Arrays.asList(libs));
 
-            baseResourceURL = expandDir.toURI().toURL();
+            baseResourceURL = expandDir.toPath().toUri().toURL();
+
         }
         File disableFile = new File(archive.getPath() + ".disabled");
         if (disableFile.exists()) {
             LOGGER.info("Plugin " + archive.getName() + " is disabled");
         }
+        if (paths.isEmpty()) {
+            LOGGER.info("No classpaths found for plugin " + archive.getName());
+        }
 
         // compute dependencies
-        List<PluginWrapper.Dependency> dependencies = new ArrayList<PluginWrapper.Dependency>();
-        List<PluginWrapper.Dependency> optionalDependencies = new ArrayList<PluginWrapper.Dependency>();
+        List<PluginWrapper.Dependency> dependencies = new ArrayList<>();
+        List<PluginWrapper.Dependency> optionalDependencies = new ArrayList<>();
         String v = atts.getValue("Plugin-Dependencies");
         if (v != null) {
             for (String s : v.split(",")) {
@@ -205,8 +232,8 @@ public class ClassicPluginStrategy implements PluginStrategy {
                 }
             }
         }
-        for (DetachedPlugin detached : DETACHED_LIST)
-            detached.fix(atts,optionalDependencies);
+        
+        fix(atts,optionalDependencies);
 
         // Register global classpath mask. This is useful for hiding JavaEE APIs that you might see from the container,
         // such as database plugin for JPA support. The Mask-Classes attribute is insufficient because those classes
@@ -217,11 +244,36 @@ public class ClassicPluginStrategy implements PluginStrategy {
                 coreClassLoader.add(pkg);
         }
 
-        ClassLoader dependencyLoader = new DependencyClassLoader(coreClassLoader, archive, Util.join(dependencies,optionalDependencies));
+        ClassLoader dependencyLoader = new DependencyClassLoader(coreClassLoader, archive, Util.join(dependencies,optionalDependencies), pluginManager);
         dependencyLoader = getBaseClassLoader(atts, dependencyLoader);
 
         return new PluginWrapper(pluginManager, archive, manifest, baseResourceURL,
                 createClassLoader(paths, dependencyLoader, atts), disableFile, dependencies, optionalDependencies);
+    }
+
+    private void fix(Attributes atts, List<PluginWrapper.Dependency> optionalDependencies) {
+        String pluginName = atts.getValue("Short-Name");
+        
+        String jenkinsVersion = atts.getValue("Jenkins-Version");
+        if (jenkinsVersion==null)
+            jenkinsVersion = atts.getValue("Hudson-Version");
+
+        for (Dependency d : DetachedPluginsUtil.getImpliedDependencies(pluginName, jenkinsVersion)) {
+            LOGGER.fine(() -> "implied dep " + pluginName + " → " + d.shortName);
+            pluginManager.considerDetachedPlugin(d.shortName);
+            optionalDependencies.add(d);
+        }
+    }
+
+    /**
+     * @see DetachedPluginsUtil#getImpliedDependencies(String, String)
+     *
+     * @deprecated since 2.163
+     */
+    @Deprecated
+    @NonNull
+    public static List<PluginWrapper.Dependency> getImpliedDependencies(String pluginName, String jenkinsVersion) {
+        return DetachedPluginsUtil.getImpliedDependencies(pluginName, jenkinsVersion);
     }
 
     @Deprecated
@@ -235,7 +287,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
     protected ClassLoader createClassLoader(List<File> paths, ClassLoader parent, Attributes atts) throws IOException {
         if (atts != null) {
             String usePluginFirstClassLoader = atts.getValue( "PluginFirstClassLoader" );
-            if (Boolean.valueOf( usePluginFirstClassLoader )) {
+            if (Boolean.parseBoolean( usePluginFirstClassLoader )) {
                 PluginFirstClassLoader classLoader = new PluginFirstClassLoader();
                 classLoader.setParentFirst( false );
                 classLoader.setParent( parent );
@@ -244,61 +296,18 @@ public class ClassicPluginStrategy implements PluginStrategy {
             }
         }
 
-        AntClassLoader2 classLoader = new AntClassLoader2(parent);
-        classLoader.addPathFiles(paths);
-        return classLoader;
-    }
-
-    /**
-     * Information about plugins that were originally in the core.
-     */
-    private static final class DetachedPlugin {
-        private final String shortName;
-        /**
-         * Plugins built for this Jenkins version (and earlier) will automatically be assumed to have
-         * this plugin in its dependency.
-         *
-         * When core/pom.xml version is 1.123-SNAPSHOT when the code is removed, then this value should
-         * be "1.123.*" (because 1.124 will be the first version that doesn't include the removed code.)
-         */
-        private final VersionNumber splitWhen;
-        private final String requireVersion;
-
-        private DetachedPlugin(String shortName, String splitWhen, String requireVersion) {
-            this.shortName = shortName;
-            this.splitWhen = new VersionNumber(splitWhen);
-            this.requireVersion = requireVersion;
-        }
-
-        private void fix(Attributes atts, List<PluginWrapper.Dependency> optionalDependencies) {
-            // don't fix the dependency for yourself, or else we'll have a cycle
-            String yourName = atts.getValue("Short-Name");
-            if (shortName.equals(yourName))   return;
-
-            // some earlier versions of maven-hpi-plugin apparently puts "null" as a literal in Hudson-Version. watch out for them.
-            String jenkinsVersion = atts.getValue("Jenkins-Version");
-            if (jenkinsVersion==null)
-                jenkinsVersion = atts.getValue("Hudson-Version");
-            if (jenkinsVersion == null || jenkinsVersion.equals("null") || new VersionNumber(jenkinsVersion).compareTo(splitWhen) <= 0)
-                optionalDependencies.add(new PluginWrapper.Dependency(shortName+':'+requireVersion));
+        if (useAntClassLoader) {
+            AntClassLoader classLoader = new AntClassLoader(parent, true);
+            classLoader.addPathFiles(paths);
+            return classLoader;
+        } else {
+            List<URL> urls = new ArrayList<>();
+            for (File path : paths) {
+                urls.add(path.toURI().toURL());
+            }
+            return new URLClassLoader2(urls.toArray(new URL[0]), parent);
         }
     }
-
-    private static final List<DetachedPlugin> DETACHED_LIST = Arrays.asList(
-        new DetachedPlugin("maven-plugin","1.296","1.296"),
-        new DetachedPlugin("subversion","1.310","1.0"),
-        new DetachedPlugin("cvs","1.340","0.1"),
-        new DetachedPlugin("ant","1.430.*","1.0"),
-        new DetachedPlugin("javadoc","1.430.*","1.0"),
-        new DetachedPlugin("external-monitor-job","1.467.*","1.0"),
-        new DetachedPlugin("ldap","1.467.*","1.0"),
-        new DetachedPlugin("pam-auth","1.467.*","1.0"),
-        new DetachedPlugin("mailer","1.493.*","1.2"),
-        new DetachedPlugin("matrix-auth","1.535.*","1.0.2"),
-        new DetachedPlugin("windows-slaves","1.547.*","1.0"),
-        new DetachedPlugin("antisamy-markup-formatter","1.553.*","1.0"),
-        new DetachedPlugin("matrix-project","1.561.*","1.0")
-    );
 
     /**
      * Computes the classloader that takes the class masking into account.
@@ -313,40 +322,42 @@ public class ClassicPluginStrategy implements PluginStrategy {
         return base;
     }
 
+    @Override
     public void initializeComponents(PluginWrapper plugin) {
     }
 
+    @Override
     public <T> List<ExtensionComponent<T>> findComponents(Class<T> type, Hudson hudson) {
 
         List<ExtensionFinder> finders;
         if (type==ExtensionFinder.class) {
             // Avoid infinite recursion of using ExtensionFinders to find ExtensionFinders
-            finders = Collections.<ExtensionFinder>singletonList(new ExtensionFinder.Sezpoz());
+            finders = Collections.singletonList(new ExtensionFinder.Sezpoz());
         } else {
             finders = hudson.getExtensionList(ExtensionFinder.class);
         }
 
-        /**
-         * See {@link ExtensionFinder#scout(Class, Hudson)} for the dead lock issue and what this does.
+        /*
+         * See ExtensionFinder#scout(Class, Hudson) for the dead lock issue and what this does.
          */
         if (LOGGER.isLoggable(Level.FINER))
-            LOGGER.log(Level.FINER,"Scout-loading ExtensionList: "+type, new Throwable());
+            LOGGER.log(Level.FINER, "Scout-loading ExtensionList: "+type, new Throwable());
         for (ExtensionFinder finder : finders) {
             finder.scout(type, hudson);
         }
 
-        List<ExtensionComponent<T>> r = Lists.newArrayList();
+        List<ExtensionComponent<T>> r = new ArrayList<>();
         for (ExtensionFinder finder : finders) {
             try {
-                r.addAll(finder._find(type, hudson));
+                r.addAll(finder.find(type, hudson));
             } catch (AbstractMethodError e) {
                 // backward compatibility
                 for (T t : finder.findExtensions(type, hudson))
-                    r.add(new ExtensionComponent<T>(t));
+                    r.add(new ExtensionComponent<>(t));
             }
         }
 
-        List<ExtensionComponent<T>> filtered = Lists.newArrayList();
+        List<ExtensionComponent<T>> filtered = new ArrayList<>();
         for (ExtensionComponent<T> e : r) {
             if (ExtensionFilter.isAllowed(type,e))
                 filtered.add(e);
@@ -355,6 +366,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         return filtered;
     }
 
+    @Override
     public void load(PluginWrapper wrapper) throws IOException {
         // override the context classloader. This no longer makes sense,
         // but it is left for the backward compatibility
@@ -368,25 +380,21 @@ public class ClassicPluginStrategy implements PluginStrategy {
             } else {
                 try {
                     Class<?> clazz = wrapper.classLoader.loadClass(className);
-                    Object o = clazz.newInstance();
+                    Object o = clazz.getDeclaredConstructor().newInstance();
                     if(!(o instanceof Plugin)) {
                         throw new IOException(className+" doesn't extend from hudson.Plugin");
                     }
                     wrapper.setPlugin((Plugin) o);
-                } catch (LinkageError e) {
+                } catch (LinkageError | ClassNotFoundException e) {
                     throw new IOException("Unable to load " + className + " from " + wrapper.getShortName(),e);
-                } catch (ClassNotFoundException e) {
-                    throw new IOException("Unable to load " + className + " from " + wrapper.getShortName(),e);
-                } catch (IllegalAccessException e) {
-                    throw new IOException("Unable to create instance of " + className + " from " + wrapper.getShortName(),e);
-                } catch (InstantiationException e) {
+                } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
                     throw new IOException("Unable to create instance of " + className + " from " + wrapper.getShortName(),e);
                 }
             }
 
             // initialize plugin
             try {
-                Plugin plugin = wrapper.getPlugin();
+                Plugin plugin = wrapper.getPluginOrFail();
                 plugin.setServletContext(pluginManager.context);
                 startPlugin(wrapper);
             } catch(Throwable t) {
@@ -399,7 +407,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
     }
 
     public void startPlugin(PluginWrapper plugin) throws Exception {
-        plugin.getPlugin().start();
+        plugin.getPluginOrFail().start();
     }
 
     @Override
@@ -432,6 +440,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         return null;
     }
 
+    @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "Administrator action installing a plugin, which could do far worse.")
     private static File resolve(File base, String relative) {
         File rel = new File(relative);
         if(rel.isAbsolute())
@@ -513,19 +522,19 @@ public class ClassicPluginStrategy implements PluginStrategy {
 
         final long dirTime = archive.lastModified();
         // this ZipOutputStream is reused and not created for each directory
-        final ZipOutputStream wrappedZOut = new ZipOutputStream(new NullOutputStream()) {
+        try (ZipOutputStream wrappedZOut = new ZipOutputStream(NullOutputStream.NULL_OUTPUT_STREAM) {
             @Override
             public void putNextEntry(ZipEntry ze) throws IOException {
                 ze.setTime(dirTime+1999);   // roundup
                 super.putNextEntry(ze);
             }
-        };
-        try {
+        }) {
             Zip z = new Zip() {
                 /**
                  * Forces the fixed timestamp for directories to make sure
                  * classes.jar always get a consistent checksum.
                  */
+                @Override
                 protected void zipDir(Resource dir, ZipOutputStream zOut, String vPath,
                                       int mode, ZipExtraField[] extra)
                     throws IOException {
@@ -539,8 +548,9 @@ public class ClassicPluginStrategy implements PluginStrategy {
             z.setDestFile(classesJar);
             z.add(mapper);
             z.execute();
-        } finally {
-            wrappedZOut.close();
+        }
+        if (classesJar.isFile()) {
+            LOGGER.log(Level.WARNING, "Created {0}; update plugin to a version created with a newer harness", classesJar);
         }
     }
 
@@ -559,7 +569,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
     /**
      * Used to load classes from dependency plugins.
      */
-    final class DependencyClassLoader extends ClassLoader {
+    static final class DependencyClassLoader extends ClassLoader {
         /**
          * This classloader is created for this plugin. Useful during debugging.
          */
@@ -567,15 +577,22 @@ public class ClassicPluginStrategy implements PluginStrategy {
 
         private List<Dependency> dependencies;
 
+        private final PluginManager pluginManager;
+
         /**
-         * Topologically sorted list of transient dependencies.
+         * Topologically sorted list of transient dependencies. Lazily initialized via double-checked locking.
          */
         private volatile List<PluginWrapper> transientDependencies;
 
-        public DependencyClassLoader(ClassLoader parent, File archive, List<Dependency> dependencies) {
+        static {
+            registerAsParallelCapable();
+        }
+
+        DependencyClassLoader(ClassLoader parent, File archive, List<Dependency> dependencies, PluginManager pluginManager) {
             super(parent);
             this._for = archive;
-            this.dependencies = dependencies;
+            this.dependencies = Collections.unmodifiableList(new ArrayList<>(dependencies));
+            this.pluginManager = pluginManager;
         }
 
         private void updateTransientDependencies() {
@@ -584,11 +601,15 @@ public class ClassicPluginStrategy implements PluginStrategy {
         }
 
         private List<PluginWrapper> getTransitiveDependencies() {
-            if (transientDependencies==null) {
+          List<PluginWrapper> localTransientDependencies = transientDependencies;
+          if (localTransientDependencies == null) {
+            synchronized (this) {
+              localTransientDependencies = transientDependencies;
+              if (localTransientDependencies == null) {
                 CyclicGraphDetector<PluginWrapper> cgd = new CyclicGraphDetector<PluginWrapper>() {
                     @Override
                     protected List<PluginWrapper> getEdges(PluginWrapper pw) {
-                        List<PluginWrapper> dep = new ArrayList<PluginWrapper>();
+                        List<PluginWrapper> dep = new ArrayList<>();
                         for (Dependency d : pw.getDependencies()) {
                             PluginWrapper p = pluginManager.getPlugin(d.shortName);
                             if (p!=null && p.isActive())
@@ -608,19 +629,12 @@ public class ClassicPluginStrategy implements PluginStrategy {
                     throw new AssertionError(e);    // such error should have been reported earlier
                 }
 
-                transientDependencies = cgd.getSorted();
+                transientDependencies = localTransientDependencies = cgd.getSorted();
+              }
             }
-            return transientDependencies;
+          }
+          return localTransientDependencies;
         }
-
-//        public List<PluginWrapper> getDependencyPluginWrappers() {
-//            List<PluginWrapper> r = new ArrayList<PluginWrapper>();
-//            for (Dependency d : dependencies) {
-//                PluginWrapper w = pluginManager.getPlugin(d.shortName);
-//                if (w!=null)    r.add(w);
-//            }
-//            return r;
-//        }
 
         @Override
         protected Class<?> findClass(String name) throws ClassNotFoundException {
@@ -630,19 +644,20 @@ public class ClassicPluginStrategy implements PluginStrategy {
                         Class<?> c = ClassLoaderReflectionToolkit._findLoadedClass(pw.classLoader, name);
                         if (c!=null)    return c;
                         return ClassLoaderReflectionToolkit._findClass(pw.classLoader, name);
-                    } catch (ClassNotFoundException e) {
+                    } catch (ClassNotFoundException ignored) {
                         //not found. try next
                     }
                 }
             } else {
                 for (Dependency dep : dependencies) {
                     PluginWrapper p = pluginManager.getPlugin(dep.shortName);
-                    if(p!=null)
+                    if(p!=null) {
                         try {
                             return p.classLoader.loadClass(name);
-                        } catch (ClassNotFoundException _) {
-                            // try next
+                        } catch (ClassNotFoundException ignored) {
+                            // OK, try next
                         }
+                    }
                 }
             }
 
@@ -650,8 +665,10 @@ public class ClassicPluginStrategy implements PluginStrategy {
         }
 
         @Override
+        @SuppressFBWarnings(value = "DMI_COLLECTION_OF_URLS",
+                            justification = "Should not produce network overheads since the URL is local. JENKINS-53793 is a follow-up")
         protected Enumeration<URL> findResources(String name) throws IOException {
-            HashSet<URL> result = new HashSet<URL>();
+            HashSet<URL> result = new HashSet<>();
 
             if (PluginManager.FAST_LOOKUP) {
                     for (PluginWrapper pw : getTransitiveDependencies()) {
@@ -695,68 +712,5 @@ public class ClassicPluginStrategy implements PluginStrategy {
         }
     }
 
-    /**
-     * {@link AntClassLoader} with a few methods exposed and {@link Closeable} support.
-     * Deprecated as of Java 7, retained only for Java 6.
-     */
-    private final class AntClassLoader2 extends AntClassLoader implements Closeable {
-        private final Vector pathComponents;
-
-        private AntClassLoader2(ClassLoader parent) {
-            super(parent,true);
-
-            try {
-                Field $pathComponents = AntClassLoader.class.getDeclaredField("pathComponents");
-                $pathComponents.setAccessible(true);
-                pathComponents = (Vector)$pathComponents.get(this);
-            } catch (NoSuchFieldException e) {
-                throw new Error(e);
-            } catch (IllegalAccessException e) {
-                throw new Error(e);
-            }
-        }
-
-
-        public void addPathFiles(Collection<File> paths) throws IOException {
-            for (File f : paths)
-                addPathFile(f);
-        }
-
-        public void close() throws IOException {
-            cleanup();
-        }
-
-        /**
-         * As of 1.8.0, {@link AntClassLoader} doesn't implement {@link #findResource(String)}
-         * in any meaningful way, which breaks fast lookup. Implement it properly.
-         */
-        @Override
-        protected URL findResource(String name) {
-            URL url = null;
-
-            // try and load from this loader if the parent either didn't find
-            // it or wasn't consulted.
-            Enumeration e = pathComponents.elements();
-            while (e.hasMoreElements() && url == null) {
-                File pathComponent = (File) e.nextElement();
-                url = getResourceURL(pathComponent, name);
-                if (url != null) {
-                    log("Resource " + name + " loaded from ant loader", Project.MSG_DEBUG);
-                }
-            }
-
-            return url;
-        }
-
-        @Override
-        protected Class defineClassFromData(File container, byte[] classData, String classname) throws IOException {
-            if (!DISABLE_TRANSFORMER)
-                classData = pluginManager.getCompatibilityTransformer().transform(classname, classData);
-            return super.defineClassFromData(container, classData, classname);
-        }
-    }
-
-    public static boolean useAntClassLoader = Boolean.getBoolean(ClassicPluginStrategy.class.getName()+".useAntClassLoader");
-    private static final Logger LOGGER = Logger.getLogger(ClassicPluginStrategy.class.getName());
-    public static boolean DISABLE_TRANSFORMER = Boolean.getBoolean(ClassicPluginStrategy.class.getName()+".noBytecodeTransformer");
+    public static /* not final */ boolean useAntClassLoader = SystemProperties.getBoolean(ClassicPluginStrategy.class.getName() + ".useAntClassLoader", true);
 }
